# curiosity

./: README.md
ws/: Makefile  compile_commands.json
ws/src/Stage-ros2/: CMakeLists.txt  INSTALL.txt  package.xml
ws/src/curiosity_cpp_pkg/: CMakeLists.txt  package.xml
ws/src/curiosity_cpp_pkg/include/curiosity_cpp_pkg/: math_util.hpp  navigate_node_cpp.hpp
ws/src/curiosity_cpp_pkg/src/: main.cpp  navigate_node_cpp.cpp
ws/src/curiosity_cpp_pkg/src/nodes/: navigate_node_cpp.cpp
ws/src/curiosity_cpp_pkg/src/utils/: coordinate_util.cpp  log_util.cpp  math_util.cpp
ws/src/navigate_cpp_pkg/: CMakeLists.txt  package.xml
ws/src/navigate_cpp_pkg/src/: controller_node.cpp
ws/src/stage_ros2-jazzy/: CMakeLists.txt  README.md  package.xml
ws/src/stage_ros2-jazzy/include/stage_ros2/: stage_node.hpp
ws/src/stage_ros2-jazzy/launch (origin)/: demo.launch.py  stage.launch.py
ws/src/stage_ros2-jazzy/res/: demos.md  install.md
ws/src/stage_ros2-jazzy/src/: stage_node.cpp  vehicle.cpp
ws/src/stage_ros2-jazzy/world/: new_cave.world
ws/src/stage_ros2-jazzy/world (origin)/: cave_multi.world
